tests/compile_fail/invalid_query_length_literal.rs
use surgeist_style::{QueryLength, QueryLengthUnit};

fn main() {
    let _length = QueryLength {
        value: 1.0,
        unit: QueryLengthUnit::Px,
    };
}
